update config, fix bugs